        - Updated the "Server" HTTP header returned by default to 
          "Restlet-Framework/xxx"
        - The thread pool of Jetty servers can now be configured
          with Spring. Reported by Evgeny Shepelyuk. 
        - Added support for the "xsl" extension in MetadataService.
          Fixed potential NPE. Contributed by Fabian Mandelbaum.
        - Added JAXB converter helper. Contributed by Sanjay Acharya. 
          
- 2.0 Milestone 4 (2009-08-06)
    - Bugs fixed
        - Improved support for the RFC 3339 date format which was 
          limited due to SimpleDateFormat. Added InternetDateFormat.
          Based on a contribution from Frank Hellwig.
        - Fixed bug in date format generated by Atom feeds.
        - The internal HTTP server now shuts down gracefully.
        - Added a "gracefulShutdown" parameter on the Jetty connector.
          Suggested by Arjohn Kampman.       
        - Registration of HTTP and JavaMail clients was missing in the
          GAE edition. Reported by MyloC.
        - XStreamRepresentation didn't register JettisonMappedXmlDriver
          correctly. Necessary for proper deserialization.
          Reported by Gabriel Ciuloaica.
        - Fixed and completed SecretDigestVerifier class.
          Reported by Thomas Cozien.
        - Returned error status when a client sends a request although 
          no client connector supporting this request's protocol is 
          registered. Reported by Avi Flax.
        - Fixed bug in Template class when the pattern is updated.
        - Fixed regression with Directory causing a 405 status to be
          returned for conditional GETs. Reported by Serge Ilyn.
        - Fixed issue with parsing of AWS authentication HTTP headers. 
          Reported by Stuart MacKay.
        - Fixed infinite loop when instantiating a Form with a query 
          in the GWT extension. Reported by Olivier Monaco.
        - Fixed issue with annotated method returning a representation